fixed overlapping

--- a/public/css/filters_tax.css
+++ b/public/css/filters_tax.css
@@ -2,13 +2,14 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
+        padding-top: 1.5rem;
         
     }
 
     .filter{
         text-align: center;
         margin-right: 2rem;
-        margin-top: 2rem;
+        /* margin-top: 2rem; */
         opacity: 0.7;
     }
     .filter:hover{
@@ -38,3 +39,8 @@
     }
 
 
+@media (max-width: 767px) {
+  .container-fluid.mt-3 {
+    margin-top: 1rem !important;
+  }
+}
